application/brennoflavio/matrix/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
  namespace: matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synapse
  template:
    metadata:
      labels:
        app: synapse
    spec:
      containers:
        - name: synapse
          image: matrixdotorg/synapse:v1.157.0
          ports:
            - containerPort: 8008
          volumeMounts:
            - name: synapse
              mountPath: /data
            - name: synapse-config
              mountPath: /data/homeserver.yaml
              subPath: homeserver.yaml
              readOnly: true
            - name: synapse-config
              mountPath: /data/brennoflavio.com.br.log.config
              subPath: brennoflavio.com.br.log.config
              readOnly: true
            - name: synapse-config
              mountPath: /data/brennoflavio.com.br.signing.key
              subPath: brennoflavio.com.br.signing.key
              readOnly: true
          resources:
            limits:
              memory: 4Gi
            requests:
              cpu: 250m
              memory: 4Gi
      volumes:
        - name: synapse
          persistentVolumeClaim:
            claimName: synapse
        - name: synapse-config
          secret:
            secretName: synapse-config
