application/brennoflavio/matrix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: matrix
spec:
  selector:
    app: synapse
  ports:
    - protocol: TCP
      port: 8008
      targetPort: 8008
  type: ClusterIP
