application/brennoflavio/matrix/slack-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slack
  namespace: matrix
spec:
  selector:
    app: slack
  ports:
    - protocol: TCP
      port: 29335
      targetPort: 29335
  type: ClusterIP
  publishNotReadyAddresses: true
