application/brennoflavio/matrix/whatsapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whatsapp
  namespace: matrix
spec:
  selector:
    app: whatsapp
  ports:
    - protocol: TCP
      port: 29318
      targetPort: 29318
  type: ClusterIP
  publishNotReadyAddresses: true
