application/brennoflavio/matrix/admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse-admin
  namespace: matrix
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-dns01
spec:
  ingressClassName: internal-nginx
  rules:
    - host: matrix.home.brennoflavio.com.br
      http:
        paths:
          - path: /_synapse/admin
            pathType: Prefix
            backend:
              service:
                name: synapse
                port:
                  number: 8008
  tls:
    - hosts:
        - matrix.home.brennoflavio.com.br
      secretName: synapse-admin-tls
