application/brennoflavio/matrix/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse
  namespace: matrix
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/proxy-body-size: 25m
    external-dns.alpha.kubernetes.io/target: "brennoflavio.com.br"
spec:
  ingressClassName: external-nginx
  rules:
  - host: matrix.brennoflavio.com.br
    http:
      paths:
      - path: /_matrix
        pathType: Prefix
        backend:
          service:
            name: synapse
            port:
              number: 8008
      - path: /_synapse/client
        pathType: Prefix
        backend:
          service:
            name: synapse
            port:
              number: 8008
  tls:
  - hosts:
    - matrix.brennoflavio.com.br
    secretName: synapse-tls
